@@ -7,10 +7,10 @@
  * Web                http://sourceforge.net/projects/jena/
  * Created            22 Feb 2003
  * Filename           $RCSfile: OntModelImpl.java,v $
- * Revision           $Revision: 1.64 $
+ * Revision           $Revision: 1.65 $
  * Release status     $State: Exp $
  *
- * Last modified on   $Date: 2004-05-06 11:05:15 $
+ * Last modified on   $Date: 2004-05-10 13:50:28 $
  *               by   $Author: ian_dickinson $
  *
  * (c) Copyright 2002, 2003, Hewlett-Packard Development Company, LP
@@ -34,6 +34,7 @@ import com.hp.hpl.jena.util.iterator.*;
 import com.hp.hpl.jena.vocabulary.*;
 import com.hp.hpl.jena.ontology.*;
 import com.hp.hpl.jena.ontology.event.*;
+import com.hp.hpl.jena.ontology.tidy.Checker;
 import com.hp.hpl.jena.graph.*;
 import com.hp.hpl.jena.graph.compose.MultiUnion;
 import com.hp.hpl.jena.graph.query.*;
@@ -53,7 +54,7 @@ import java.util.*;
  *
  * @author Ian Dickinson, HP Labs
  *         (<a  href="mailto:Ian.Dickinson@hp.com" >email</a>)
- * @version CVS $Id: OntModelImpl.java,v 1.64 2004-05-06 11:05:15 ian_dickinson Exp $
+ * @version CVS $Id: OntModelImpl.java,v 1.65 2004-05-10 13:50:28 ian_dickinson Exp $
  */
 public class OntModelImpl
     extends ModelCom
@@ -1850,6 +1851,76 @@ public class OntModelImpl
      */
     public ModelMaker getModelMaker() {
         return m_spec.getModelMaker();
+    }
+    
+
+    /**
+     * <p>If this OntModel is presenting an OWL model, answer the minimum OWL language 
+     * level that the constructs
+     * used in this model lie entirely within.  The three possible return values are 
+     * {@link OWL#FULL_LANG} for OWL-full, 
+     * {@link OWL#DL_LANG} for OWL-DL or
+     * {@link OWL#LITE_LANG} for OWL-lite.
+     * Note that these URI's are <strong>not</strong> officially sanctioned by the WebOnt 
+     * working group.  For unknown reasons, the working group chose not to assign official
+     * URI's to represent the different OWL language levels. There is a slim chance that this
+     * may change in future, in which case these return values will change apropriately.
+     * In addition, the given <code>problems</problems> list, if non-null, will be filled with the syntax
+     * problems detected by the {@link com.hp.hpl.jena.ontology.tidy.Checker syntax checker}.
+     * </p>
+     * <p>
+     * The Jena OWL syntax checker will normally list as problems those constructs used in
+     * this model that are in OWL Full but not permitted in OWL DL.  The exception to this
+     * is if the {@linkplain #getProfile() language profile} for this model is  
+     * {@linkplain OWLLiteProfile OWL Lite}, then the syntax checker will
+     * test for constructs that lie in OWL-DL or OWL-Full and hence outside in OWL-Lite.
+     * </p>
+     * 
+     * @param problems A list that, if non-null, will have the various problems discovered by the OWL syntax
+     * checker added to it.
+     * @return A resource denoting the minimum OWL language level for this model
+     * @exception OntologyException if this model is not an OWL model
+     */
+    public Resource getOWLLanguageLevel( List problems ) {
+        Profile oProf = getProfile();
+        if (!(oProf instanceof OWLProfile)) {
+            throw new OntologyException( "Cannnot perform OWL language level test on non OWL model" );
+        }
+        
+        // this process is made complicated by the design of the syntax checker, which uses
+        // two different grammars for Lite and DL checking.  in some circumstances, we have
+        // to run both kinds of check
+        
+        // using expectLite = false gives the most complete result (lite, dl or full)
+        Checker checker = new Checker( false );
+        checker.add( this );
+        
+        // do the check, and collect any problem reports
+        String lang = checker.getSubLanguage();
+        
+        // if we are expecting lite, we want to re-run to get better explanations
+        if ((oProf instanceof OWLLiteProfile ) && !lang.equals( "Lite" ) && (problems != null)) {
+            checker = new Checker( true );
+            checker.add( this );
+            checker.getSubLanguage();
+        }
+        
+        if (problems != null) {
+            for (Iterator i = checker.getProblems(); i.hasNext(); ) {
+                problems.add( i.next() );
+            }
+        }
+        
+        // determine the return value
+        if (lang.equals( "Lite" )) {
+            return OWL.LITE_LANG;
+        }
+        else if (lang.equals( "DL" )) {
+            return OWL.DL_LANG;
+        }
+        else {
+            return OWL.FULL_LANG;
+        }
     }
     
     
